[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.27.0"
ndarray = { version = "0.15.6", features = ["std"] }
rand = "0.8.5"
rayon = "1.8.0"
sscanf = "0.4.1"
z3 = { version = "0.12.1", features = ["static-link-z3"] }
